src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    color: white;
    background-color: black;
    max-width: 100vw;
    min-width: 400px;
    min-height: 100vh;
    animation: bio 2s ease-in-out;
}

html {
    max-width: 100vw;
    margin: 0;
    padding: 0;
}

@keyframes bio {
    0% {
        opacity: 0;
        transform: translateX(-100px);
    }
    100% {
        opacity: 1;
        transform: translateX(0);
    }
}

